buildslave init.d does not support status, so provide a pattern for a ps check.

--- a/ansible/roles/common/tasks/buildbot.yml
+++ b/ansible/roles/common/tasks/buildbot.yml
@@ -41,4 +41,4 @@
   template: src=etc_default_buildslave.j2 dest=/etc/default/buildslave backup=yes mode=0644
 
 - name: Start buildslave
-  service: name=buildslave state=started enabled=yes
+  service: name=buildslave state=started enabled=yes pattern=/usr/bin/buildslave
