--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,20 +1,6 @@
 ---
-- name: Update apt cache
-  apt: update_cache=yes
-
-- name: Upgrade all safe packages
-  apt: upgrade=safe
-
-- name: Install base packages
-  apt: pkg={{ item }} state=installed
-  with_items:
-    - apt-transport-https
-    - sudo
-    - vim
-
-- name: Install unattended upgrades (Debian/Ubuntu only)
-  apt: pkg=unattended-upgrades state=installed
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+- include: apt.yml tags=pkg
+  when: ansible_os_family == 'Debian'
 
 - include: ntp.yml tags=ntp
 #- include: security.yml tags=security
