--- a/ansible/roles/common/tasks/ntp.yml
+++ b/ansible/roles/common/tasks/ntp.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install ntp
-  apt: pkg=ntp state=installed
+  apt: pkg=ntp state=present
+  when: ansible_os_family == 'Debian'
 
 - name: Configure ntp
   template: src=ntp.conf.j2 dest=/etc/ntp.conf
