--- a/ansible/roles/slave/tasks/buildslave.yml
+++ b/ansible/roles/slave/tasks/buildslave.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install buildbot-slave
-  apt: pkg={{ item }} state=installed
+  apt: pkg={{ item }} state=present
   with_items:
     - buildbot-slave
 
