--- a/ansible/roles/master/tasks/buildmaster.yml
+++ b/ansible/roles/master/tasks/buildmaster.yml
@@ -42,7 +42,7 @@
   when: ansible_os_family == 'Debian'
 
 - name: Enable nginx proxy
-  copy: src=sadm/buildbot/buildbot.nginx dest=/etc/nginx/services/buildbot.nginx mode=0444
+  template: src=buildbot.nginx.j2 dest=/etc/nginx/services/buildbot.nginx mode=0444
   when: ansible_os_family == 'Debian'
   notify: restart nginx
 
