--- a/ansible/roles/master/tasks/main.yml
+++ b/ansible/roles/master/tasks/main.yml
@@ -2,4 +2,5 @@
 - include: nginx.yml tags=nginx
 - include: buildmaster.yml tags=buildbot
 - include: dl.yml tags=dl
-
+- include: changes.yml tags=changes
+- include: nginx_restart.yml tags=post
