--- a/ansible/roles/master/tasks/main.yml
+++ b/ansible/roles/master/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - include: nginx.yml tags=nginx
 - include: buildmaster.yml tags=buildbot
+- include: central.yml tags=central
 - include: dl.yml tags=dl
 - include: changes.yml tags=changes
 - include: nginx_restart.yml tags=post
