--- a/ansible/roles/slave/tasks/main.yml
+++ b/ansible/roles/slave/tasks/main.yml
@@ -1,2 +1,9 @@
 ---
-- include: buildslave.yml tags=buildbot
+- include: buildslave_linux.yml tags=buildbot
+  when: ansible_system == 'Linux'
+
+# Ansible user creation on osx seems broken, so buildbot will not be available.
+# OSX assumes the presence of an already created user that is set by host_vars
+# to act as the buildbot user. This is not the only difficulty.
+- include: buildslave_osx.yml tags=buildbot
+  when: ansible_system == 'Darwin'
