--- a/ansible/roles/builder/tasks/buildbot.yml
+++ b/ansible/roles/builder/tasks/buildbot.yml
@@ -1,17 +1,11 @@
 ---
 - name: Add buildbot user
-  user: name=buildbot state=present shell=/bin/bash home=/home/buildbot
+  user:
+    name: buildbot
+    state: present
+    shell: /bin/bash
+    home: /home/buildbot
 
 - name: Add public key to login as buildbot
   authorized_key: user=buildbot key="{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
-
-- name: Add github to known_hosts
-  sudo: yes
-  sudo_user: buildbot
-  lineinfile:
-    dest: ~/.ssh/known_hosts
-    create: yes
-    state: present
-    line: "{{ lookup('pipe', 'ssh-keyscan -t rsa github.com') }}"
-    regexp: "^github\\.com"
 
