--- a/ansible/roles/builder/tasks/buildbot.yml
+++ b/ansible/roles/builder/tasks/buildbot.yml
@@ -1,10 +1,10 @@
 ---
 - name: Add buildbot user
   user:
-    name: buildbot
+    name: "{{ buildslave_username }}"
     state: present
     shell: /bin/bash
-    home: /home/buildbot
+    home: "/home/{{ buildslave_username }}"
 
 - name: Add public key to login as buildbot
   authorized_key: user=buildbot key="{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
