--- a/ansible/roles/slave/tasks/buildslave_linux.yml
+++ b/ansible/roles/slave/tasks/buildslave_linux.yml
@@ -9,16 +9,16 @@
   args:
     creates: buildbot.tac
   sudo: yes
-  sudo_user: buildbot
+  sudo_user: "{{ buildslave_username }}"
 
 - name: Update slave host information
   sudo: yes
-  sudo_user: buildbot
+  sudo_user: "{{ buildslave_username }}"
   template: src=buildbot_info_host.j2 dest=info/host
 
 - name: Update slave admin information
   sudo: yes
-  sudo_user: buildbot
+  sudo_user: "{{ buildslave_username }}"
   template: src=buildbot_info_admin.j2 dest=info/admin
 
 - name: Enable buildslave init.d
