Include homebrew installer for OSX provisioning as a submodule
The alternative was to download the installer as per brew
install instructions, but this meant keeping up with changes
due to having to maintain a SHA sum.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fifoci"]
 	path = ansible/fifoci
 	url = git@github.com:yerejm/fifoci.git
+[submodule "homebrew"]
+	path = ansible/homebrew
+	url = https://github.com/Homebrew/install.git
