Restart buildslave to handle running tasks over an already provisioned host.
Since OSX runs without an OS service, ignore errors since an error
occurs when the master is down. The assumption is that the typical
error is due to this and not some other reason.

--- a/ansible/roles/slave/tasks/buildslave_linux.yml
+++ b/ansible/roles/slave/tasks/buildslave_linux.yml
@@ -25,5 +25,5 @@
   template: src=etc_default_buildslave.j2 dest=/etc/default/buildslave backup=yes mode=0644
 
 - name: Start buildslave
-  service: name=buildslave state=started enabled=yes pattern=/usr/bin/buildslave
+  service: name=buildslave state=restarted enabled=yes pattern=/usr/bin/buildslave
 
