Automate fifoci provisioning
The dolphin set up assumes the (linux) fifoci lives on master.

--- a/ansible/roles/master/tasks/main.yml
+++ b/ansible/roles/master/tasks/main.yml
@@ -4,4 +4,5 @@
 - include: central.yml tags=central
 - include: dl.yml tags=dl
 - include: changes.yml tags=changes
+- include: fifoci.yml tags=fifoci
 - include: nginx_restart.yml tags=post
