Move fifoci into its own role.

--- a/ansible/fifoci.yml
+++ b/ansible/fifoci.yml
@@ -1,9 +1,12 @@
 ---
-- hosts: buildslaves
+- hosts: fifoci
   user: root
   roles:
     - common
     - buildbot
     - builder
+    - fifoci
     - slave
+  vars:
+    buildbot_username: fifoci
 
