--- a/ansible/roles/buildbot/tasks/know_github_linux.yml
+++ b/ansible/roles/buildbot/tasks/know_github_linux.yml
@@ -1,7 +1,7 @@
 ---
 - name: Add github to known_hosts
   sudo: yes
-  sudo_user: "{{ buildmaster_username or buildslave_username }}"
+  sudo_user: "{{ buildbot_username }}"
   lineinfile:
     dest: ~/.ssh/known_hosts
     create: yes
