--- a/ansible/roles/slave/tasks/buildslave_linux.yml
+++ b/ansible/roles/slave/tasks/buildslave_linux.yml
@@ -7,18 +7,18 @@
 - name: Create build slave
   shell : buildslave create-slave . {{ master_address }} {{ slave_username }} {{ slave_password }}
   args:
-    creates: buildbot.tac
+    creates: info/admin
   sudo: yes
-  sudo_user: "{{ buildslave_username }}"
+  sudo_user: "{{ buildbot_username }}"
 
 - name: Update slave host information
   sudo: yes
-  sudo_user: "{{ buildslave_username }}"
+  sudo_user: "{{ buildbot_username }}"
   template: src=buildbot_info_host.j2 dest=info/host
 
 - name: Update slave admin information
   sudo: yes
-  sudo_user: "{{ buildslave_username }}"
+  sudo_user: "{{ buildbot_username }}"
   template: src=buildbot_info_admin.j2 dest=info/admin
 
 - name: Enable buildslave init.d
