create buildbot's bin directory before putting files inside

--- a/ansible/roles/master/tasks/buildmaster.yml
+++ b/ansible/roles/master/tasks/buildmaster.yml
@@ -26,6 +26,11 @@
   sudo_user: buildbot
   copy: src=sadm/buildbot/master.cfg dest=~/master.cfg mode=0444
 
+- name: Create bin directory
+  sudo: yes
+  sudo_user: buildbot
+  file: path="~/bin" state=directory
+
 - name: Install send_build.py
   sudo: yes
   sudo_user: buildbot
