Allow use of a dolphin mirror to act as a local clone.
Unfortunately, submodules are not able to be localised without altering
the mirror.

--- a/ansible/roles/fifoci/tasks/fifoci.yml
+++ b/ansible/roles/fifoci/tasks/fifoci.yml
@@ -21,8 +21,7 @@
   git:
     repo: "{{ fifoci_repository }}"
     dest: fifoci
-    depth: 3
-    force: yes
+    accept_hostkey: "{{ 'yes' if testing is defined else 'no' }}"
 
 - name: Get fifoci requirements
   copy: src=fifoci/requirements.txt dest=~/requirements-fifoci.txt
