--- a/ansible/roles/master/tasks/changes.yml
+++ b/ansible/roles/master/tasks/changes.yml
@@ -46,12 +46,16 @@
   template: src=changes.nginx.j2 dest=/etc/nginx/services/changes.nginx mode=0444
   when: ansible_os_family == 'Debian'
 
-- name: Create dolphin clone on which changes operates
+# There is no need to clone the submodules since only the dolphin changes are of
+# interest.
+- name: Create dolphin (non-recursive) clone on which changes operates
   sudo: yes
   sudo_user: changes
   git:
     repo: "{{ dolphin_repository }}"
     dest: "{{ changes_dolphin_location }}"
+    accept_hostkey: "{{ 'yes' if testing is defined else 'no' }}"
+    recursive: no
 
 - name: Install changes cron
   cron:
