--- a/ansible/roles/windows/tasks/pywin32.yml
+++ b/ansible/roles/windows/tasks/pywin32.yml
@@ -25,7 +25,7 @@
 
 # Install application
 - name: Is application installed?
-  win_stat: path='C:\python27\pywin32-wininst.log'
+  win_stat: path='C:\python27\scripts\pywin32_postinstall.py'
   register: app
 
 - name: Install application
