Correct privilege granting powershell script.
Originally worked only by coincidence due to a memory related coding error. It
would fail on the first execution with a Win32Exception saying "The parameter is
incorrect" referring to the username parameter. In a command prompt, it would
seem to work as well. The [code was sourced from stackoverflow](http://stackoverflow.com/questions/26392151/enabling-a-local-user-right-assignment-in-powershell/26393118#26393118)
but it shows up in various other places with minor differences.

The [corrections for the memory related coding error are sourced from stackoverflow](http://stackoverflow.com/questions/1147914/why-might-lsaaddaccountrights-return-status-invalid-parameter/14469248#14469248) too.
It resolves the memory error.

--- a/ansible/roles/windows/tasks/buildbot.yml
+++ b/ansible/roles/windows/tasks/buildbot.yml
@@ -25,14 +25,15 @@
 - name: Install symbol store utility
   raw: "copy c:\\vagrant\\ansible\\sadm\\symbols\\storesymbols.bat c:\\{{ buildbot_username }}"
 
+# http://trac.buildbot.net/wiki/RunningBuildbotOnWindows
 - name: Install buildslave
   raw: "pip install buildbot-slave"
 
 - name: Create build slave
   raw: "buildslave create-slave c:\\{{ buildbot_username }} {{ master_address }} {{ slave_username }} {{ slave_password }}"
 
-# http://trac.buildbot.net/wiki/RunningBuildbotOnWindows
-# No unprivileged user, so no need to add privilege.
+# Adding the service does not grant the logon privilege. This must be done
+# explicitly.
 - name: Install logon as service privilege utility
   raw: "copy c:\\vagrant\\ansible\\roles\\windows\\files\\lsa_add_logon_as_svc.ps1 c:\\tmp"
 
