Put fifoci runner on own host while fifoci front end remains on master.
This allows the recreation of master without having to recreate the fifoci build
slave. Primarily, this avoids having to check out the repository for the slave
tasks again.

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -14,5 +14,9 @@ fifoci_repository: https://github.com/dolphin-emu/fifoci
 # Repository location of SDL. Current SDL packages available to debian-based
 # distributions have a bug that causes dolphin to fail. For these systems, SDL
 # is installed from source.
+# e.g. http://hg.libsdl.org/SDL
 sdl_repository: http://hg.libsdl.org/SDL
+
+fifoci_server_name: fifoci.dev
+master_host: 172.118.70.40
 
