--- a/ansible/roles/master/tasks/main.yml
+++ b/ansible/roles/master/tasks/main.yml
@@ -3,5 +3,6 @@
 - include: buildmaster.yml tags=buildbot
 - include: central.yml tags=central
 - include: dl.yml tags=dl
+- include: fifoci.yml tags=fifoci
 - include: changes.yml tags=changes
 - include: nginx_restart.yml tags=post
