--- a/ansible/roles/builder/tasks/dpkg.yml
+++ b/ansible/roles/builder/tasks/dpkg.yml
@@ -1,18 +1,18 @@
 ---
 - name: Install debian dpkg template files
   sudo: yes
-  sudo_user: buildbot
+  sudo_user: "{{ buildbot_username }}"
   copy: src=dpkg/ dest=~/debian/
 
 # For some reason, copy does not copy the file attributes.
 - name: Fix file attributes post-copy
   sudo: yes
-  sudo_user: buildbot
+  sudo_user: "{{ buildbot_username }}"
   file: state=file path=debian/rules mode=0755
 
 - name: Create dpkg template archive for buildbot
   sudo: yes
-  sudo_user: buildbot
+  sudo_user: "{{ buildbot_username }}"
   shell: "tar czf dolphin-debian.tar.gz debian/"
   args:
     creates: ~/dolphin-debian.tar.gz
